@@ -132,6 +132,11 @@ CHANGES IN FLTK 1.3.4					RELEASED: ??? ?? 2016
 	- Several box types were not drawn correctly when deactivated.
 	  The background color for deactivated widgets is now correct:
 	  fl_inactive(color()) (STR #2907).
+	- Fix inconsistent interpretation of ld() in image handling
+	  (STR #3308). This is a minor issue since ld() is usually 0 or
+	  w()*d(). Documentation has been fixed, and ld() handling is now
+	  consistent in Fl_(RGB_)Image and fl_draw_image() and friends. See
+	  documentation of Fl_Image and Fl_RGB_Image for more information.
 	- Fixed Fl_Pixmap (background) drawing to respect the clip region
 	  (STR #3206).
 	- Reading of .pbm image files is fixed: 1 is now interpreted as
